force-app/main/default/objects/Zendesk__ZendeskCustomFieldValue__c/Zendesk__ZendeskCustomFieldValue__c.object-meta.xml
<CustomObject>
    <label>Zendesk Custom Field Value</label>
    <nameField>
        <displayFormat>ZCFV-{YY}{MM}{DD}{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zendesk Custom Field Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>