force-app/main/default/objects/Zendesk__ZendeskCustomFieldValue__c/fields/Zendesk__SalesforceValue__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__SalesforceValue__c</fullName>
    <label>Salesforce Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>