force-app/main/default/objects/Zendesk__ZendeskCustomFieldValue__c/fields/Zendesk__ZendeskCustomField__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZendeskCustomField__c</fullName>
    <label>Zendesk Custom Field</label>
    <referenceTo>Zendesk__ZendeskCustomField__c</referenceTo>
    <relationshipLabel>Zendesk Custom Field Values</relationshipLabel>
    <relationshipName>Zendesk_Custom_Field_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>