force-app/main/default/objects/Zendesk__ZendeskCustomFieldValue__c/fields/Zendesk__ZendeskLabel__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZendeskLabel__c</fullName>
    <label>Zendesk Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>