force-app/main/default/objects/Zendesk__ZendeskCustomFieldValue__c/fields/Zendesk__ZendeskValue__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__ZendeskValue__c</fullName>
    <label>Zendesk Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>